mv mapper to own class, add and impl new endpoint avg-age
