# src/main/java/com/github/janrahman/postaddress_address_book/person/PersonController.java
@@ -3,7 +3,7 @@ package com.github.janrahman.postaddress_address_book.person;
 import com.github.janrahman.postaddress_address_book.openapi.api.PersonsApi;
 import com.github.janrahman.postaddress_address_book.openapi.model.AddPerson;
 import com.github.janrahman.postaddress_address_book.openapi.model.Address;
-import com.github.janrahman.postaddress_address_book.openapi.model.NewAddress;
+import com.github.janrahman.postaddress_address_book.openapi.model.AvgAge;
 import com.github.janrahman.postaddress_address_book.openapi.model.Person;
 import com.github.janrahman.postaddress_address_book.openapi.model.PersonsIdAddressesPostRequest;
 import com.github.janrahman.postaddress_address_book.openapi.model.UpdatePersonInfo;
@@ -21,20 +21,26 @@ public class PersonController implements PersonsApi {
   }
 
   @Override
+  public ResponseEntity<AvgAge> _personsAvgAgeGet(String postalCode) {
+    return personService.getAverageAgeByPostalCode(postalCode);
+  }
+
+  @Override
   public ResponseEntity<List<Person>> _personsGet(
       String street, String streetNumber, String postalCode, String city) {
     return personService.getAll(street, streetNumber, postalCode, city);
   }
 
   @Override
-  public ResponseEntity<Address> _personsIdAddressesGet(Long id, NewAddress newAddress) {
-    return null;
+  public ResponseEntity<List<Address>> _personsIdAddressesGet(Long id) {
+    return personService.getAddresses(id);
   }
+
 
   @Override
   public ResponseEntity<Address> _personsIdAddressesPost(
       Long id, PersonsIdAddressesPostRequest personsIdAddressesPostRequest) {
-    return null;
+    return personService.saveAddress(id, personsIdAddressesPostRequest);
   }
 
   @Override
