# src/main/java/com/github/janrahman/postaddress_address_book/person/PersonRepositoryApi.java
@@ -1,6 +1,8 @@
 package com.github.janrahman.postaddress_address_book.person;
 
+import com.github.janrahman.postaddress_address_book.jooq.model.tables.records.AddressesRecord;
 import com.github.janrahman.postaddress_address_book.jooq.model.tables.records.PersonsRecord;
+import java.time.LocalDate;
 import java.util.List;
 import org.springframework.lang.NonNull;
 
@@ -11,4 +13,10 @@ public interface PersonRepositoryApi {
       String street, String streetNumber, String postalCode, String city);
 
   List<PersonsRecord> findAll();
+
+  @NonNull
+  List<AddressesRecord> findAddressesByPersonId(Long id);
+
+  @NonNull
+  List<LocalDate> findAllPersonBirthdaysByPostalCode(String postalCode);
 }
